--- a/store/templates/store/index.html
+++ b/store/templates/store/index.html
@@ -37,7 +37,7 @@
               <span>Pharmacy Value</span>
               </div>
             </a>
-            <a href="{% url 'login_activity_log' %}" class="group">
+            <a href="#" class="group">
               <div class="bg-teal-600 group-hover:bg-white text-white group-hover:text-teal-500 border border-transparent group-hover:border-teal-500 py-3 px-6 rounded-lg shadow-md group-hover:shadow-lg transition duration-300 ease-in-out flex items-center justify-center">
               <i class="fas fa-user-check mr-3 text-2xl group-hover:scale-110 transition-transform"></i>
               <span>Login Tracker</span>
