--- a/store/templates/store/unit_bulk_locker.html
+++ b/store/templates/store/unit_bulk_locker.html
@@ -39,7 +39,7 @@
             <div class="grid grid-cols-2 lg:grid-cols-4 gap-2 w-full sm:w-auto">
                 <a href="{% url 'dispensary_record' store.id%}"
                 class="flex items-center justify-center px-2 py-2 text-xs font-medium rounded-md text-white bg-teal-600 hover:bg-teal-700 focus:outline-none focus:ring-2 focus:ring-teal-500">
-                <i class="fas fa-prescription-bottle-medical mr-1"></i>Move to Dispensary
+                <i class="fas fa-prescription-bottle-medical mr-1"></i>Restock Dispensary
                 </a>
                 <a href="{% url 'unit_issue_list' store.id %}"
                 class="flex items-center justify-center px-2 py-2 text-xs font-medium rounded-md text-white bg-rose-600 hover:bg-rose-700 focus:outline-none focus:ring-2 focus:ring-rose-500">
