add patient model to admin, and remove prices from schedule

--- a/store/templates/store/dispense_pdf.html
+++ b/store/templates/store/dispense_pdf.html
@@ -125,7 +125,7 @@ h1 {
     <div class="summary">
         <b>ISSUED: {{ total_appearance }}</b>
         <b>QUANTITY: {{ total_quantity }}</b>
-        <b>WORTH: N{{ total_price }}</b>
+        <b>WORTH: N{{ total_price|floatformat:2 }}</b>
     </div>
 
   <table>
