--- a/store/templates/store/unit_bulk_locker.html
+++ b/store/templates/store/unit_bulk_locker.html
@@ -61,7 +61,7 @@
                     <thead class="bg-orange-500">
                         <tr class="text-xs text-left text-white uppercase">
                             <th scope="col" class="px-4 py-2 font-medium tracking-wider">#</th>
-                            <th scope="col" class="px-4 py-2 font-medium tracking-wider">Date Received</th>
+                            <th scope="col" class="px-4 py-2 font-medium tracking-wider">Date</th>
                             <th scope="col" class="px-4 py-2 font-medium tracking-wider">Dosage Form</th>
                             <th scope="col" class="px-4 py-2 font-medium tracking-wider">Category</th>
                             <th scope="col" class="px-4 py-2 font-medium tracking-wider">Generic Drug</th>
