--- a/store/templates/store/unit_dispensary_locker.html
+++ b/store/templates/store/unit_dispensary_locker.html
@@ -56,7 +56,7 @@
                     <thead class="bg-fuchsia-500">
                         <tr class="text-xs text-left text-white uppercase">
                             <th scope="col" class="px-4 py-2 font-medium tracking-wider">#</th>
-                            <th scope="col" class="px-4 py-2 font-medium tracking-wider">Date restocked</th>
+                            <th scope="col" class="px-4 py-2 font-medium tracking-wider">Date</th>
                             <th scope="col" class="px-4 py-2 font-medium tracking-wider">Dosage form</th>
                             <th scope="col" class="px-4 py-2 font-medium tracking-wider">Category</th>
                             <th scope="col" class="px-4 py-2 font-medium tracking-wider">Generic Drug</th>
