--- a/store/templates/store/unitissue_pdf.html
+++ b/store/templates/store/unitissue_pdf.html
@@ -118,7 +118,7 @@ h1 {
     <div class="logo-container">
         <img class="logo-image" src="{% static "images/logo.jpg" %}" alt="">
     </div>
-    <h1> NOHD PHARMACY TRANSFER-IN REPORT</h1>
+    <h1> NOHD PHARMACY UNIT ISSUE REPORT</h1>
     <div class="result">
       {{ result|upper }}
     </div>
