--- a/store/templates/store/unit_value.html
+++ b/store/templates/store/unit_value.html
@@ -38,8 +38,8 @@
         <p class="text-lg text-cyan-100">Total Quantity: {{ unit_worth.total_quantity|intcomma }}</p>
       </div>
       <p class="text-xs text-emerald-100 text-center italic mt-4">
-        These values are updated in real-time based on current inventory levels and prices
-      </p>
+        These values are updated hourly based on inventory levels and prices
+    </p>
     </div>
   </div>
 {% endblock %}
