--- a/store/templates/store/worth.html
+++ b/store/templates/store/worth.html
@@ -12,8 +12,8 @@
             <p class="text-emerald-100 text-xs mt-1">
                 <span class="bg-white text-emerald-700 text-xs px-2 py-1 rounded-full"> As of: {{ today }}</span>
             </p>
-            <p class="text-xs text-white p-2">
-                These values are updated in real-time based on current inventory levels and prices
+            <p class="text-xs text-emerald-100 text-center italic">
+                These values are updated hourly based on inventory levels and prices
             </p>
         </div>
         <div class="grid grid-cols-1 md:grid-cols-3 gap-6 p-6 text-center">
