--- a/store/templates/store/unit_bulk_locker.html
+++ b/store/templates/store/unit_bulk_locker.html
@@ -36,7 +36,7 @@
                 </div>
             </form>
         
-            <div class="grid grid-cols-2 lg:grid-cols-4 gap-2 w-full sm:w-auto">
+            <div class="grid grid-cols-2 lg:grid-cols-5 gap-2 w-full sm:w-auto">
                 <a href="{% url 'dispensary_record' store.id%}"
                 class="flex items-center justify-center px-2 py-2 text-xs font-medium rounded-md text-white bg-teal-600 hover:bg-teal-700 focus:outline-none focus:ring-2 focus:ring-teal-500">
                 <i class="fas fa-prescription-bottle-medical mr-1"></i>Restock Dispensary
@@ -52,6 +52,10 @@
                 <a href="{{ drug_requests_url }}"
                 class="flex items-center justify-center px-2 py-2 text-xs font-medium rounded-md text-white bg-slate-600 hover:bg-slate-700 focus:outline-none focus:ring-2 focus:ring-slate-500">
                 <i class="fas fa-list-alt mr-1"></i> Request List
+                </a>
+                <a href="{%url 'record_report' %}"
+                class="flex items-center justify-center px-2 py-2 text-xs font-medium rounded-md text-white bg-amber-600 hover:bg-amber-700 focus:outline-none focus:ring-2 focus:ring-amber-500">
+                <i class="fas fa-list-alt mr-1"></i> Recieved report
                 </a>
             </div>
         </div>        
