--- a/store/templates/store/item_pdf.html
+++ b/store/templates/store/item_pdf.html
@@ -166,39 +166,35 @@ body{
         <tbody class="bg-white border-2 max-sm:p-2 p-2 overflow-x-auto border-cyan-900 text-xs">
             <tr class="bg-gradient-to-r from-cyan-700 via-cyan-500 to-cyan-700 text-white">
                 <th class="sn">#</th>
-                <th>DATE ADDED / UPDATED</th>
+                <th scope="col" class="df">DATE ADDED / UPDATED</th>
                 <th scope="col" class="p-3">DRUG INFO</th>
                 <th scope="col" class="df p-3">DOSAGE FORM</th>
-                <th scope="col" class="cp p-3">PACK SIZE</th>
+                <th scope="col" class="sn p-3">PACK SIZE</th>
                 <th scope="col" class="cp p-3">COST PRICE</th>
                 <th scope="col" class="cp p-3">BALANCE</th>
-                <th scope="col" class="cp p-3">EXPIRY DATE</th>
-                <th scope="col" class="cp p-3">ADDED BY</th>
+                <th scope="col" class="cp p-3">EXP DATE</th>
+                <th scope="col" class="df p-3">ADDED BY</th>
                 </tr>
               {% for i in f %}        
         <tr class="{% cycle 'bg-white hover:bg-cyan-200' 'bg-cyan-100 hover:bg-cyan-200' %} text-gray-600">
                 <td class="border-1 border-stone-700 p-3 text-center sn">
                 {{forloop.counter}}
                 </td>
-                <td class="border-1 border-stone-700 p-3 text-center">
-                {{i.updated_at|default_if_none:''}}
+                <td class="border-1 border-stone-700 p-3 text-center df">
+                {{i.updated_at|date:'d-m-Y'|default_if_none:''}}
                 </td>
                 <td class="border-1 border-stone-700 p-3 text-center">
-                {{i.generic_name|default_if_none:''|upper}}<br>
-                {{i.trade_name|default_if_none:''|upper}}<br>
-                {{i.strength|default_if_none:''|upper}}
-                <small>
-                    {{i.supplier|default_if_none:''|upper}} 
-                </small>
+                {{i.generic_name|default_if_none:''|upper}}-&nbsp;{{i.trade_name|default_if_none:''|upper}}<br>
+                {{i.strength|default_if_none:''|upper}}-&nbsp;{{i.supplier|default_if_none:''|upper}} 
             </td>
             <td class="border-1 border-stone-700 p-3 text-center df">
                     {{i.dosage_form|default_if_none:''|upper}} 
                 </td>
-                <td class="border-1 border-stone-700 p-3 text-center cp">
+                <td class="border-1 border-stone-700 p-3 text-center an">
                 {{i.pack_size|default_if_none:''|upper}}
                 </td>
                 <td class="border-1 border-stone-700 p-3 text-center cp">
-                {{i.cost_price|default_if_none:''|upper}}
+                {{i.cost_price|default_if_none:''}}
                 </td>
                 <td class="border-1 border-stone-700 p-3 text-center cp">                    
                 {%if i.current_balance <= 0 %} 
@@ -208,8 +204,8 @@ body{
                 <td class="cp border-1 border-stone-700 p-3 text-center">
                 {{i.expiration_date|date:'m-Y'|default_if_none:'N/A'}}
                 </td>
-                <td class="cp border-1 border-stone-700 p-3 text-center">
-                {{i.added_by|upper}}
+                <td class="df border-1 border-stone-700 p-3 text-center">
+                {{i.added_by|default_if_none:'N/A'|upper}}
                 </td>
           </tr>
           {%endfor%}
