Refactor cache settings and enhance admin resources for UnitStore and LockerInventory; update templates for improved display and functionality

--- a/store/templates/store/record_pdf.html
+++ b/store/templates/store/record_pdf.html
@@ -150,7 +150,7 @@ h1 {
                 {{forloop.counter}}
             </td>    
             <td class="text-center">
-                {{r.date_issued|date:'d-M-Y'|default_if_none:''|upper}}<br>
+                {{r.date_issued|date:'d-M-Y'|default_if_none:''}}<br>
                 <small> 
                     issued by: {{r.issued_by|default_if_none:''|upper}}
                 </small>
