--- a/store/templates/store/unit_bulk_locker.html
+++ b/store/templates/store/unit_bulk_locker.html
@@ -43,7 +43,7 @@
                 </a>
                 <a href="{% url 'unit_issue_list' store.id %}"
                 class="flex items-center justify-center px-2 py-2 text-xs font-medium rounded-md text-white bg-rose-600 hover:bg-rose-700 focus:outline-none focus:ring-2 focus:ring-rose-500">
-                <i class="fas fa-file-pdf mr-1"></i> Locker Report
+                <i class="fas fa-file-pdf mr-1"></i> Report
                 </a>
                 <a href="{% url 'drug_request' store.id %}"
                 class="flex items-center justify-center px-2 py-2 text-xs font-medium rounded-md text-white bg-sky-600 hover:bg-sky-700 focus:outline-none focus:ring-2 focus:ring-sky-500">
@@ -55,8 +55,7 @@
                 </a>
                 <a href="{%url 'record_report' %}"
                 class="flex items-center justify-center px-2 py-2 text-xs font-medium rounded-md text-white bg-amber-600 hover:bg-amber-700 focus:outline-none focus:ring-2 focus:ring-amber-500">
-                <i class="fas fa-list-alt mr-1"></i> Recieved report
-                </a>
+                <i class="fas fa-list-alt mr-1"></i> Recieved                </a>
             </div>
         </div>        
         <div class="mt-4 bg-white shadow overflow-hidden sm:rounded-lg">
